[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/bigduck.png" type="Texture" id=1]
[ext_resource path="res://scenes/BadEnding.gd" type="Script" id=2]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=3]
[ext_resource path="res://sounds/rumble.wav" type="AudioStream" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float level;

void fragment() {
	float a = texture(TEXTURE, UV).r;
	if (a > level) {
		COLOR.rgb = vec3(1.0, 1.0, 1.0);
	}
	else {
		COLOR.rgb = vec3(0.0, 0.0, 0.0);
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/level = 0.5

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
	float a = texture(TEXTURE, UV).a;
	float b = texture(SCREEN_TEXTURE, SCREEN_UV).r;
	if (a == 0.0) {
		COLOR.rgba = vec4(1.0, 1.0, 1.0, 0.0)
	}
	if (a > 0.5 && b > 0.5) {
		COLOR.rgb = vec3(0.0, 0.0, 0.0);
	}
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="BadEnding" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture_Duck" type="TextureRect" parent="."]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Label_Message" type="Label" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -240.0
margin_bottom = -132.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Flicker" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Timer_Message" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Audio_Rumble" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.2

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer_Flicker" to="." method="_on_Timer_Flicker_timeout"]
[connection signal="timeout" from="Timer_Message" to="." method="_on_Timer_Message_timeout"]
